--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
+    "express-session": "^1.15.1",
     "express-validator": "^3.1.2",
     "hbs": "~4.0.1",
     "mongoose": "^7.4.1",
     "morgan": "~1.7.0",
     "nodemailer": "^3.1.5",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2"
   }
 }
