--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "morgan": "~1.7.0",
     "nodemailer": "^3.1.5",
     "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.3.2"
   }
